# Emulator-SIgnala_server

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h  wavesimulator.cpp
src/: client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  protocol.cpp  protocol.h  protocoljson.cpp  protocoljson.h  protocolxml.cpp  protocolxml.h  server.cpp  server.h  wavesimulator.cpp  wavesimulator.h
